--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
         applicationId "net.friendsmap.ayrsa.friendsmap"
         minSdkVersion 19
         targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
     }
@@ -49,11 +49,12 @@ dependencies {
     implementation 'id.zelory:compressor:2.1.0'
     implementation 'com.codesgood:justifiedtextview:1.1.0'
     implementation 'com.github.sadra:AwesomeSpinner:1.3.0'
+    implementation 'com.intuit.sdp:sdp-android:1.0.6'
+    implementation 'com.tomergoldst.android:tooltips:1.0.10'
 
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.google.firebase:firebase-core:16.0.3'
     implementation 'com.google.firebase:firebase-messaging:17.3.0'
-
     apply plugin: 'com.google.gms.google-services'
 }
