--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,9 @@ dependencies {
     implementation 'com.codesgood:justifiedtextview:1.1.0'
     implementation 'com.github.sadra:AwesomeSpinner:1.3.0'
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
+    implementation 'com.getkeepsafe.taptargetview:taptargetview:1.12.0'
+    implementation 'com.github.rubengees:introduction:2.0.0'
+    implementation 'info.hoang8f:android-segmented:1.0.6'
 
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
