--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,41 +11,42 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
-        android:name="ir.mamap.app.Mamap"
+        android:name=".Mamap"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="ir.mamap.app.SupportActivity"></activity>
-        <activity android:name="ir.mamap.app.RulesActivity" />
-        <activity android:name="ir.mamap.app.UserDataEditActivity" />
-        <activity android:name="ir.mamap.app.MainActivity">
+        <activity android:name=".UpgradeActivity"></activity>
+        <activity android:name=".SupportActivity" />
+        <activity android:name=".RulesActivity" />
+        <activity android:name=".UserDataEditActivity" />
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="ir.mamap.app.ExceptionActivity" />
-        <activity android:name="ir.mamap.app.OnEnterActivity" />
-        <activity android:name="ir.mamap.app.LoginActivity" />
-        <activity android:name="ir.mamap.app.VerificationActivity" />
-        <activity android:name="ir.mamap.app.RegisterActivity" />
-        <activity android:name="ir.mamap.app.MenuActivity" />
+        <activity android:name=".ExceptionActivity" />
+        <activity android:name=".OnEnterActivity" />
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".VerificationActivity" />
+        <activity android:name=".RegisterActivity" />
+        <activity android:name=".MenuActivity" />
 
-        <service android:name="ir.mamap.app.FirebaseService">
+        <service android:name=".FirebaseService">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
         <service
-            android:name="ir.mamap.app.LocationService"
+            android:name=".LocationService"
             android:enabled="true" />
 
         <receiver
-            android:name="ir.mamap.app.RestarterBroadcastReceiver"
+            android:name=".RestarterBroadcastReceiver"
             android:enabled="true"
             android:exported="true"
             android:label="RestartServiceWhenStopped">
@@ -61,8 +62,8 @@
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyAvvR6vDDafdq7F8SbHjKMiLrvRYUtFrMI" />
 
-        <activity android:name="ir.mamap.app.AddUserActivity" />
-        <activity android:name="ir.mamap.app.MessageListActivity" />
+        <activity android:name=".AddUserActivity" />
+        <activity android:name=".MessageListActivity" />
     </application>
 
 </manifest>
