fix register need verfication bug and avoid rtl layout

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,9 +17,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".UpgradeActivity"></activity>
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".UpgradeActivity" />
         <activity android:name=".SupportActivity" />
         <activity android:name=".RulesActivity" />
         <activity android:name=".UserDataEditActivity" />
@@ -30,18 +30,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ExceptionActivity" />
+        <activity android:name=".ExceptionActivity"  />
         <activity android:name=".OnEnterActivity" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".VerificationActivity" />
         <activity android:name=".RegisterActivity" />
-        <activity android:name=".MenuActivity" />
+        <activity android:name=".MenuActivity"  />
 
         <service android:name=".FirebaseService">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
+
         <service
             android:name=".LocationService"
             android:enabled="true" />
@@ -65,6 +66,7 @@
 
         <activity android:name=".AddUserActivity" />
         <activity android:name=".MessageListActivity" />
+
     </application>
 
 </manifest>
