--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,10 +11,11 @@ android {
         applicationId "ir.mamap.app"
         minSdkVersion 19
         targetSdkVersion 28
-        versionCode 4
-        versionName "1.3"
+        versionCode 1
+        versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
+        resConfigs "en"
     }
     buildTypes {
         release {
@@ -53,6 +54,7 @@ dependencies {
     implementation 'com.getkeepsafe.taptargetview:taptargetview:1.12.0'
     implementation 'com.github.rubengees:introduction:2.0.0'
     implementation 'info.hoang8f:android-segmented:1.0.6'
+    implementation 'io.nlopez.smartlocation:library:3.3.3'
 
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
