--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,8 +41,13 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:15.0.1'
     implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     implementation 'com.google.maps.android:android-maps-utils:0.5'
-    implementation 'ir.map.sdk:sdk_map:2.0.4'
-    implementation 'ir.map.sdk:sdk_common:2.0.0'
+
+    implementation 'ir.map.sdk:sdk_map:3.0.4'
+    implementation 'com.mapbox.mapboxsdk:mapbox-sdk-services:3.4.1'
+    implementation 'com.mapbox.mapboxsdk:mapbox-sdk-geojson:3.4.1'
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-telemetry:3.5.7'
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-gestures:0.3.0'
+
     implementation 'com.github.hosein398:DialogBuilder:0.1.0'
     implementation 'com.karumi:dexter:5.0.0'
     implementation 'com.zhihu.android:matisse:0.5.1'
