--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
         applicationId "ir.mamap.app"
         minSdkVersion 19
         targetSdkVersion 28
-        versionCode 1
+        versionCode 2
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
@@ -38,9 +38,9 @@ dependencies {
     implementation 'com.muddzdev:styleabletoast:2.2.0'
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:design:28.0.0'
-    implementation 'com.google.android.gms:play-services-maps:15.0.1'
+    //implementation 'com.google.android.gms:play-services-maps:15.0.1'
     implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
-    implementation 'com.google.maps.android:android-maps-utils:0.5'
+    // implementation 'com.google.maps.android:android-maps-utils:0.5'
 
     implementation 'ir.map.sdk:sdk_map:3.0.4'
     implementation 'com.mapbox.mapboxsdk:mapbox-sdk-services:3.4.1'
