--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,11 +11,15 @@ android {
         applicationId "ir.mamap.app"
         minSdkVersion 19
         targetSdkVersion 28
-        versionCode 4
-        versionName "1.0"
+        versionCode 5
+        versionName "1.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
         resConfigs "en"
+    }
+    lintOptions {
+
+        checkReleaseBuilds false
     }
     buildTypes {
         release {
@@ -23,6 +27,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    buildToolsVersion = '28.0.3'
 }
 
 dependencies {
@@ -34,11 +39,10 @@ dependencies {
     implementation 'com.wang.avi:library:2.1.3'
     implementation 'com.amitshekhar.android:android-networking:1.0.2'
     implementation 'com.amitshekhar.android:jackson-android-networking:1.0.2'
-    implementation 'com.google.android.gms:play-services-location:15.0.1'
+    implementation 'com.google.android.gms:play-services-location:16.0.0'
     implementation 'com.muddzdev:styleabletoast:2.2.0'
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:design:28.0.0'
-    //implementation 'com.google.android.gms:play-services-maps:15.0.1'
     implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     // implementation 'com.google.maps.android:android-maps-utils:0.5'
 
@@ -60,12 +64,12 @@ dependencies {
     implementation 'com.github.rubengees:introduction:2.0.0'
     implementation 'info.hoang8f:android-segmented:1.0.6'
     implementation 'io.nlopez.smartlocation:library:3.3.3'
-
+    implementation 'ir.tapsell.sdk:tapsell-sdk-android:4.3.6'
 
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'com.google.firebase:firebase-core:16.0.3'
-    implementation 'com.google.firebase:firebase-messaging:17.3.0'
+    implementation 'com.google.firebase:firebase-core:16.0.6'
+    implementation 'com.google.firebase:firebase-messaging:17.4.0'
     implementation 'com.android.support:multidex:1.0.1'
     apply plugin: 'com.google.gms.google-services'
 }
